[gd_scene load_steps=3 format=3 uid="uid://cpxwe2qsigy4g"]

[ext_resource type="Script" uid="uid://dcnpf6dgam0e3" path="res://addons/quest_weaver/ui/node_properties/quest_node_editor.gd" id="1_66u7u"]
[ext_resource type="PackedScene" uid="uid://bulr50esg11es" path="res://addons/quest_weaver/ui/components/auto_complete_line_edit.tscn" id="2_x766l"]

[node name="QuestNodeEditor" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_66u7u")

[node name="ActionPicker" type="OptionButton" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 30)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Quest: "

[node name="TargetQuestIdEdit" parent="HBoxContainer" instance=ExtResource("2_x766l")]
unique_name_in_owner = true
layout_mode = 2
